# daily-brief

daily-brief-client/: build.sh  package-lock.json  package.json  svelte.config.js
daily-brief-client/src/: app.css
daily-brief-client/src/lib/: Comment.svelte  Post.svelte  localStore.ts  stores.ts
daily-brief-client/src/routes/: +layout.svelte  +page.svelte
daily-brief-server/: pyproject.toml  run.sh  server.py
downloader/: .gitignore  downloader.py  run.sh
reddit-downloader/: creds.json.template  pyproject.toml  reddit-downloader.py  requirements.txt  run.sh
