[tool.poetry]
name = "reddit-downloader"
version = "0.1.0"
description = ""
authors = ["Ben Doan <ben@bendoan.me>"]
readme = "README.md"
packages = [{include = "reddit_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
ipython = "^8.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
